--- a/app/assets/stylesheets/client.css
+++ b/app/assets/stylesheets/client.css
@@ -1,19 +1,18 @@
-/* This file contains the style parameters for the sample client. */
-
-
-.box {
-    width: 300px;
-    height: 200px;
-    border: thin black solid;
-    background-color: rgb(243,243,243);
+.container {
+    width: 500px;
+    height: 350px;
+    border: 10px solid black;
+    background-color: #FFFFCC;
 }
 
-.message {
-    margin: 10px 20px 10px 20px;
-    border: thin black solid;
+.report {
+    margin: 5px 10px 20px 10px;
+    border: 5px black solid;
 }
 
 body {
-	font-family: 'Helvetica Neue Light', HelveticaNeue-Light, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: courier, serif;
+	font-size: 14pt;
+	font-weight:bold;
 }
 
