--- a/app/views/client/index.html.erb
+++ b/app/views/client/index.html.erb
@@ -1,109 +1,101 @@
 <center>
-<div id="login-page" class="box">
-  <div id="login-message" class="message"></div>
-  <center>
-    <form>
-      Username: <input id="login-username" type="text" name="username"><br>
-      Password: <input id="login-password" type="password" name="pwd"><br>
-      <input id="login-button" type="submit" value="Login">
-      <input id="add-user-button" type="submit" value="Add User">
-    </form>
-  </center>
-</div>
+  <div id="login" class="container">
+    <div id="prompt" class="report"></div>
+    <center>
+      <form>
+        Username: <input id="username" type="text" name="username"><br>
+        Password: <input id="password" type="password" name="password"><br>
+        <input id="login_submit" type="submit" value="Login">
+        <input id="signin_submit" type="submit" value="Add User">
+      </form>
+    </center>
+  </div>
 
-<div id="welcome-page" class="box">
-  <div id="welcome-message" class="message"></div>
-  <center>
-    <form>
-      <input type="submit" id="logout-button" value="Logout">
-    </form>
-  </center>
-</div>
+  <div id="logout" class="container">
+    <div id="count" class="report"></div>
+    <center>
+      <form>
+        <input id="logout_submit" type="submit" value="Logout">
+      </form>
+    </center>
+  </div>
 </center>
 
 <script type="text/javascript">
-<!--
-/* Put the page into a blank state until everything finishes loading
-   This is not the ideal thing to do, but better than nothing. */
-$('#login-page').hide()
-$('#welcome-page').hide()
-$('#login-username').val("")
-$('#login-password').val("")
-$('#login-message').html("Please enter your credentials below")
-$('#welcome-message').html("You should never see this text");
+$('#login').hide();
+$('#logout').hide();
 
 /* setup the page so that only one of the forms is shown */
 $(document).ready(function() {
-   show_login_page();
- });
+  showLogin("Please enter your credentials below");
+});
 
 /* Note: These two functions are deliberately written to ignore the starting
    state.  This makes them slightly slower, but has the side effect of 
    restoring any invariant that gets accidentally broken.*/
-function show_login_page(message) {
-  if(! message) message = "Please enter your credentials below";
-  $('#welcome-page').hide()
-  $('#login-username').val("")
-  $('#login-password').val("")
-  $('#login-message').html(message)
-  $('#login-page').show()
+function showLogin(result) {
+  $('#logout').hide();
+  $('#username').val("");
+  $('#password').val("");
+  $('#prompt').html(result);
+  $('#login').show();
 }
 
-function show_welcome_page(user, count) {
-   $('#login-page').hide();
-   $('#welcome-page').show();
-   $('#welcome-message').html("Welcome "+user+"<br>You have logged in "+count+" times.");
+function showLogout(user, count) {
+  $('#login').hide();
+  $('#count').html("Welcome "+user+"<br>You have logged in "+count+" times.");
+  $('#logout').show();
 }
 
-function handle_login_response(data, user) {
-  if( data.errCode > 0 ) {
-     c = data.count;
-     show_welcome_page(user, c);
+function handleLogin(username, result) {
+  if (result.errCode > 0) {
+    showLogout(username, result.count);
   } else {
-     if( debug_flag ) {
-        if( data.errCode != ERR_BAD_CREDENTIALS ) {
-           alert( 'Illegal error code encounted for this state');
-        }
-     }
-     show_login_page( get_message_for_errcode(data.errCode) );  
+    showLogin(toMessage(result.errCode));
   }
 }
 
-function handle_add_user_response(data, user) {
-  if( data.errCode > 0 ) {
-     c = data.count;
-     show_welcome_page(user, c);
+function handleSignin(username, result) {
+  if (result.errCode > 0) {
+    showLogout(username, result.count);
   } else {
-     if( debug_flag ) {
-        if( data.errCode != ERR_BAD_USERNAME && data.errCode != ERR_USER_EXISTS ) {
-           alert( 'Illegal error code encounted for this state');
-        }
-     }
-     show_login_page( get_message_for_errcode(data.errCode) );  
+    showLogin(toMessage(result.errCode));  
   }
 }
 
-$('#login-button').click(function() {
-   username = $('#login-username').val()
-   password = $('#login-password').val()
-   json_request("/users/login", { user: username, password: password }, function(data) { return handle_login_response(data, username); }, function(err) { alert('error occurred on request'); });
-
-   return false;
-});
-
-$('#add-user-button').click(function() {
-   username = $('#login-username').val()
-   password = $('#login-password').val()
-   json_request("/users/add", { user: username, password: password }, function(data) { return handle_add_user_response(data, username); }, function(err) {alert('error occurred on request'); });
-
-   return false;
-});
-
-$('#logout-button').click(function() {
-  show_login_page();
-
+$('#login_submit').click(function() {
+  username = $('#username').val()
+  password = $('#password').val()
+  send_json("/users/login",
+    {user: username, password: password},
+    function(result) {
+      return handleLogin(username, result);
+    },
+    function(error) {
+      alert('error occurred on request');
+    }
+  );
   return false;
 });
--->
+
+$('#signin_submit').click(function() {
+  username = $('#username').val()
+  password = $('#password').val()
+  send_json("/users/add",
+    {user: username, password: password},
+    function(result) {
+      return handleSignin(username, result);
+    },
+    function(error) {
+      alert('error occurred on request');
+    }
+  );
+  return false;
+});
+
+$('#logout_submit').click(function() {
+  showLogin("Please enter your credentials below");
+  return false;
+});
 </script>
 
